--- a/events/index.html
+++ b/events/index.html
@@ -22,6 +22,10 @@
 </nav></header><main>
 <div>
 <h1>Events</h1></div><article class=item>
+<time class=post-date>08/03/2022</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2022-03-08-aws-workshop/>AWS 'Serverless' Workshop</a>
+</article><article class=item>
 <time class=post-date>03/03/2022</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2022-03-03-hosting-workshop/>Hosting Workshop</a>
