--- a/index.html
+++ b/index.html
@@ -34,13 +34,8 @@
 <div class=left>
 <h2>About HackSoc Nottingham</h2><p>A part of the University of Nottingham Students&rsquo;​ Union, HackSoc is centered around getting its members building, learning, and sharing new tech. Every week we have programming tutorials for complete beginners, advanced topics with guest speakers, and throughout the year we travel to hackathons to team up with other students from around the world.</p><p>HackSoc is run by a committed and motivated <a href=/committee>team of students</a> striving to give our members the best experiences possible.</p></div><div class=right>
 <div>
-<h2>Upcoming Events</h2><article class=item>
-<time class=post-date>
-8th March
-</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2022-03-08-aws-workshop/>AWS 'Serverless' Workshop</a>
-</article></div><div>
+<h2>Upcoming Events</h2>There are currently no planned events.
+</div><div>
 <h2><a href=/newsletters>Newsletters</a></h2><article class=item>
 <time class=post-date>02/01/2022</time>
 &mdash;
